Thesis: more corrections.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -238,7 +238,7 @@ Rules for creating terms are divided into two genres: introduction rules and eli
 
 Elimination rules for a type, on the other hand, tell us how to use terms of this type to get terms of other types. For example, the simplest elimination rule for $\N$ says that if $\term{\Gamma}{z}{X}$ and $\term{\Gamma}{s}{X \to X}$, then $\term{\Gamma, n : \N}{\recN{z}{s}{n}}{X}$. This rule, alternatively called a recursor, allows us to define functions by recursion on natural numbers, but to do proofs by induction we need a stronger elimination rule. We won't state it here to keep things simple.
 
-The next thing we are interested in is convertibility, which formalizes the notion of computation. Intuitively, two terms are convertible if they evaluate to the same result. For example, we would expect that both $2 + 2$ and $4$ evaluate to $4$, and this is indeed the case, so they are convertible. To state that formally, we write $\termconv{\Gamma}{2 + 2}{4}{\N}$. Rules that govern the behaviour of convertibility, similarly to rules for term manipulation, come in two genres: computation rules and uniqueness rules.
+The next thing we are interested in is convertibility, which formalizes the notion of computation. Intuitively, two terms are convertible if they evaluate\footnote{We leave the idea of evaluation informal and won't describe it in more detail.} to the same result. For example, we would expect that both $2 + 2$ and $4$ evaluate to $4$, and this is indeed the case, so they are convertible. To state that formally, we write $\termconv{\Gamma}{2 + 2}{4}{\N}$. Rules that govern the behaviour of convertibility, similarly to rules for term manipulation, come in two genres: computation rules and uniqueness rules.
 
 Computation rules describe what happens when we first apply an introduction rule and then an elimination rule. For example, the first computation rule for $\N$ states that given $\term{\Gamma}{z}{X}$ and $\term{\Gamma}{s}{X \to X}$, we have $\termconv{\Gamma}{\recN{z}{s}{0}}{z}{X}$, and the second rule states that given $\term{\Gamma}{z}{X}$, $\term{\Gamma}{s}{X \to X}$ and $\term{\Gamma}{n}{\N}$ we have $\termconv{\Gamma}{\recN{z}{s}{\suc{n}}}{s(\recN{z}{s}{n})}{X}$.
 
@@ -248,7 +248,7 @@ The last thing to mention is how exactly contexts work and some of its consequen
 
 The most important consequence of this is that we need a notion of convertibility for types. Because types are formed in contexts, and contexts can contain assumptions of the form $x : A$, types can depend on terms. For example, for any natural number $n$ we can form the type $\Fin{n}$ that has exactly $n$ elements, formally written $\type{\Gamma, n : \N}{\Fin{n}}$. This raises the question: is the type $\Fin{2 + 2}$ the same as the type $\Fin{4}$? The answer is yes -- because $2 + 2$ and $4$ are convertible, these types are also convertible, formally written $\typeconv{\Gamma}{\Fin{2 + 2}}{\Fin{4}}$. The rules that govern type convertibility aren't very interesting -- they say that convertibility is an equivalence relation and that dependent types are convertible whenever the terms they depend on are convertible.
 
-An astute reader has probably noticed that we sneaked into the above description a word that is familiar but was not defined, namely ``element''. The elements of a type $A$ are its closed terms that are in normal form. A term is closed if its context is empty and it is in normal form if it is the final result of evaluation,\footnote{We leave the idea of evaluation informal and won't describe it in more detail.} i.e. it can't be evaluated any further.
+An astute reader has probably noticed that we sneaked into the above description a word that is familiar but was not defined, namely ``element''. The elements of a type $A$ are its closed terms that are in normal form. A term is closed if its context is empty and it is in normal form if it is the final result of evaluation, i.e. it can't be evaluated any further.
 
 For example, $\term{}{4}{\N}$ is a closed term in normal form, $\term{}{2 + 2}{\N}$ is a closed term that is not in normal form and $\term{n : \N}{\suc{n}}{\N}$ is a term in normal form, but it is not closed because it depends on the assumption $n : \N$ (such terms are called open). It turns out that for natural numbers, the elements are precisely $0, \suc{0}, \suc{\suc{0}}, \suc{\suc{\suc{0}}}, \dots$ which we can interpret as $0, 1, 2, 3, \dots$ respectively. So, the elements of the type of natural numbers are precisely the natural numbers. Who would have guessed!
 
@@ -279,7 +279,7 @@ We start by importing some modules: one for working with lists, as we will need 
 
 The command \m{Print} is part of the Vernacular -- a language of useful commands for looking up definitions and theorems, and other things usually provided at the IDE level. We use it to recall the definition of \m{list} and \m{app} (we modified the outputs of these commands to simplify our explanations).
 
-\m{list} is a parameterized family of inductive types. This means that for each type \m{A}, there is a type list \m{list A}, defined by giving the possible ways to construct its elements. An element of this type can be either \m{nil}, which represents an empty list, or \m{cons h t} for some $\m{h} : \m{A}$ and $\m{t} : \m{list A}$, which represents a list with head \m{h} and tail \m{t}. This is very similar to the definition of lists in pseudo-Haskell that we saw in section \ref{impfun}.
+\m{list} is a parameterized family of inductive types. This means that for each type \m{A}, there is a type \m{list A}, defined by giving the possible ways to construct its elements. An element of this type can be either \m{nil}, which represents an empty list, or \m{cons h t} for some $\m{h} : \m{A}$ and $\m{t} : \m{list A}$, which represents a list with head \m{h} and tail \m{t}. This is very similar to the definition of lists in pseudo-Haskell that we saw in section \ref{impfun}.
 
 \m{app} is a function that concatenates two lists. It takes as arguments a type \m{A} and two lists of elements of type \m{A}, named \m{l1} and \m{l2}, and it returns an element of type \m{list A} as result. The first argument is surrounded by curly braces, which means it is implicit -- we won't need to write it, because Coq can infer it on its own. The other arguments are surrounded by parentheses, which means they are explicit -- we need to provide them when applying the function.
 
@@ -287,7 +287,7 @@ The command \m{Print} is part of the Vernacular -- a language of useful commands
 
 In section \ref{worlds} we said that in a formal setting we can prove a specification correct. This is actually the first of our techniques and in the rest of the listing our task will be to demonstrate how it works. The thing we want to specify is a function for reversing lists and the specification, named \m{rev\_spec}, starts on line 20. It takes as arguments a type \m{A} and a function $\m{f} : \m{list A -> list A}$ and our intention is that \m{rev\_spec} \m{f} means ``\m{f} is a function that reverses lists''.
 
-The definition says that \m{rev\_spec f} is a proposition\footnote{This is actually one of the differences between type theory as presented in the \hyperref[mltt]{last section} and Coq. In type theory, we represent propositions using ordinary types. In Coq, only types of sort \m{Prop} are propositions, whereas types of sort \m{Type} are not.} and that it is defined to be a record consisting of two fields. The first one is named \m{f\_app} and intuitively means that \m{f} anticommutes with list concatenation -- if we concatenate two lists and then reverse the result using \m{f}, it's the same as if we first reversed the lists and then concatenated them in the opposite order. The second field is named \m{f\_singl} and means that on lists with only one element \m{f} acts like an identity function.
+The definition says that \m{rev\_spec f} is a proposition\footnote{This is actually one of the differences between type theory as presented in the \hyperref[mltt]{last section} and Coq. In type theory, we represent propositions using ordinary types. In Coq, there is a special type of propositions called \m{Prop}.} and that it is defined to be a record consisting of two fields. The first one is named \m{f\_app} and intuitively means that \m{f} anticommutes with list concatenation -- if we concatenate two lists and then reverse the result using \m{f}, it's the same as if we first reversed the lists and then concatenated them in the opposite order. The second field is named \m{f\_singl} and means that on lists with only one element \m{f} acts like an identity function.
 
 Now, let's take a break from Coq and make a short conceptual trip: how can we prove that a specification specifies precisely what we wanted? Of course, in general, we can't, because what we really want lives in the world of ideas, whereas the specification lives in the formal world. But if we are sure that the desired solution will meet the specification, the best sanity check we can perform is proving that the specification determines a unique object.
 In such a situation if we are dissatisfied with the solution, we are sure that it is not because of some bug or other kind of technical error, but simply because we were unable to express what we wanted.
@@ -315,7 +315,7 @@ We won't explain how this proof idea is actually carried out, because such an ex
     \item \m{change} allows us to replace a term or its part with a convertible term. For example, having computed \m{2 + 2} to \m{4}, we could use \m{change} to ``reverse'' this computation, changing \m{4} back into \m{2 + 2}.
 \end{itemize}
 
-Our short tutorial on Coq has come to an end. From now on, we assume the reader is familiar with the technical workings of Coq -- while discussing further code listings, we will only explain the concepts and techniques.\footnote{When numbering concepts and techniques, we won't distinguish between them, as any concept, to be useful, has to be concretely realized by some technique and behind any technique there is some concept.} The moral of our example can be summarized as follows.
+Our short tutorial on Coq has come to an end. From now on, we assume the reader is familiar with the technical workings of Coq -- while discussing further code listings, we will only explain the concepts and techniques.\footnote{When numbering concepts and techniques, we won't distinguish between them. On the one hand, every concept, to be useful, has to be operationalized, which basically means turning it into some useful technique. On the other hand, every technique is based on some underlying idea, which means it is an operationalization of some concept.} The moral of our example can be summarized as follows.
 
 \concept{Prove that the specification determines a unique object.}
 
@@ -333,7 +333,7 @@ As we can see, the book-length literature on Coq is quite scarce and sometimes d
 
 Even though the book is great, it won't be of much inspiration for us. The reasons stem directly from the book's main themes. The first one is exploring the various algorithmic uses of lazy evaluation. Even though Coq makes lazy evaluation readily available, it does so using the tactic \m{cbn} and command \m{Eval cbn in t}, whereas the term language has barely any control over the evaluation order. This means that large swaths of the book are at odds with Coq.
 
-The second theme in the book, somewhat related to the first, are techniques for analysis of amortized complexity of lazy data structures. Okasaki was actually the first person to realize that in the purely functional world, amortization is possible (in earlier times it was though that amortization is contradicted by persistence) and that it is inseparably tied to lazy evaluation. This aspect of PFDS won't be important for us because, as we have already underlined many times, we are not interested in complexity -- only in formal correctness.
+The second theme in the book, somewhat related to the first, are techniques for analysis of amortized complexity of lazy data structures. Okasaki was actually the first person to realize that in the purely functional world, amortization is possible (in earlier times it was thought that amortization is contradicted by persistence) and that it is inseparably tied to lazy evaluation. This aspect of PFDS won't be important for us because, as we have already underlined many times, we are not interested in complexity -- only in formal correctness.
 
 The third big theme of the book are numerical representations. The idea is that functional data structures are analogous to various obscure positional number systems that aren't at all used for other purposes. In this view, inserting an element into a data structure is analogous to incrementing a number, deleting an element is analogous to decrementing a number, merging two data structures is analogous to adding numbers and so on. While it is a very interesting and worthwhile idea, its purpose is coming up with new data structures -- something we won't do here. In fact we think that PFDS did such a great job at developing the field of functional data structures that in this thesis we will occupy ourselves entirely with functional algorithms.
 
@@ -361,7 +361,7 @@ After this chapter's thorough introduction it should be clear now what we mean b
 
 \chapter{Specify the problem} \label{specify}
 
-In the \hyperref[introduction]{previous chapter} we have already seen our first concept/technique\footnote{I don't distinguish between concepts and techniques. On the one hand, every concept, to be useful, has to be operationalized, which basically means turning it into some useful technique. On the other hand, every technique is based on some underlying idea, which means it is an operationalization of some concept.} and it told us to prove that our specification determines a unique object. Fair enough, but to do that we have to have some specification first and therefore it would be nice to have some technique for coming up with good specifications.
+In the \hyperref[introduction]{previous chapter} we have already seen our first concept/technique and it told us to prove that our specification determines a unique object. Fair enough, but to do that we have to have some specification first and therefore it would be nice to have some technique for coming up with good specifications.
 
 This is likely the hardest of all tasks that a functional algorithmist will have to perform in order to get a formally-verified algorithm\footnote{Besides inventing the algorithm itself, of course, but coming up with good algorithms is not a topic of this thesis.} as it requires a significant amount of mathematical creativity and insight, which can only be acquired with experience. As we will see in later chapters, the techniques presented there will strip the tasks of implementing the algorithm and proving it correct of most of their creativity requirements and make them quite repetitive (maybe even boring), but this is not so for the task of inventing the specification.
 
@@ -371,7 +371,7 @@ As a guide to avoiding these traps, we present a simple heuristic for checking i
 
 \begin{center}
     \textbf{Formally verified algorithm concept/technique \#0} \\
-    Find a specification of the problem that is both abstract and easy to use.
+    Find a specification of the problem that is sufficiently abstract and easy to use.
 \end{center}
 
 \section{Not that easy} \label{noteasy}
@@ -387,19 +387,19 @@ So, how can we formally define the proposition ``the list of natural numbers $l$
 ]
 {Coq}{Snippets/SpecifyTheProblem.v}
 
-This is exactly what the above definition says. We start by defining an auxiliary function named \m{nth}, which returns the \m{n}-th element of the list \m{l} (wrapped in the \m{option} constructor \m{Some}) or \m{None} if the list is not long enough to have an \m{n}-th element. Then comes the definition of sortedness itself: the list \m{l} is sorted when, for any two indices \m{i} and \m{j} such that \m{i} comes before \m{j}, if the \m{i}-th element of \m{l} is \m{n} and the \m{j}-th element of \m{l} is \m{m}, then \m{n} is less than or equal to \m{m}.
+This is exactly what the above definition says. We start by defining an auxiliary function named \m{nth}, which returns the \m{n}-th element of the list \m{l} (wrapped in the \m{option} constructor \m{Some}) or \m{None} if the list is not long enough to have an \m{n}-th element. Note that the use of \m{option} in the return type is necessary because we always need to return a result and, if the return type were just \m{A}, this wouldn't be possible for the empty list as we can't conjure an element of \m{A} out of nowhere. Moreover, in Coq pattern matching has to be exhaustive, i.e. all cases must be covered, so we can't just omit the case of empty list.\footnote{Type theories usually don't have pattern matching, but when they do, it must be exhaustive too.} Neither can we throw an exception, because in Coq (and in type theory) exceptions are not allowed.
 
-This definition looks quite correct (and it is), but it won't serve us well. This is because it defies the second part of our advice \#0 -- it is not easy to use. The reason why will be rather elusive for people who are not Coq experts,\footnote{Knowing at first sight that a definition like this one will later turn out to be quite clumsy requires precisely the kind of creativity and insight mentioned before that can't be packed into a repetitive, mindless technique.} but I will nonetheless try to give an appealing argument.
+Then comes the definition of sortedness itself: the list \m{l} is sorted when, for any two indices \m{i} and \m{j} such that \m{i} comes before \m{j}, if the \m{i}-th element of \m{l} is \m{n} and the \m{j}-th element of \m{l} is \m{m}, then \m{n} is less than or equal to \m{m}. This definition looks quite correct (and it is), but it won't serve us well. This is because it defies the second part of our advice \#0 -- it is not easy to use. The reason why will be rather elusive for people who are not Coq experts,\footnote{Knowing at first sight that a definition like this one will later turn out to be quite clumsy requires precisely the kind of insight mentioned before that can't be packed into a repetitive, mindless technique.} but I will nonetheless try to give an appealing argument.
 
 The problem with this definition is that it is a \textit{patchwork} definition -- it is made up of various ingredients that don't fit together perfectly. The first ingredient is universal quantification over two natural numbers. The quantifier itself is fine, as are the numbers, but problems start with the hypothesis \m{n <= m}.
 
-Upon closer inspection, there's a mismatch between the inductive definition of natural numbers (using zero and successor) and the inductive definition of the relation \m{<=} (which is based on reflexivity and the fact that \m{n <= m} implies \m{n <= S m}). This is not a big problem all by itself, just one source of potential clumsiness.
+Upon closer inspection, there's a mismatch between the inductive definition of natural numbers and the inductive definition of the relation \m{<=}. Natural numbers are defined by postulating \m{0 :\ nat} (zero is a natural number) and \m{S :\ nat -> nat} (the successor of a natural number is a natural number), whereas the relation \m{<=} is defined by postulating \m{forall n :\ nat, n <= n} and \m{forall n m :\ nat, n <= m -> n <= S m}. The mismatch stems from the fact that matching on \m{n} does not reveal in which case of \m{n <= m} we are and conversely, matching on a proof of \m{n <= m} does not reveal whether \m{n} is zero or a successor. This, however, is not a big problem all by itself -- it's just one source of potential clumsiness.
 
 That's not the only source of clumsiness, however. After another quantifier and two numbers, we find two equations. General equations between variables (like \m{n = m}) are not problematic at all, but equations with more specific terms on one or both sides are a bit clumsy, often requiring additional bookkeeping effort to use properly.
 
-The next source of clumsiness is the fact that in the lef-hand sides of these equations we used the auxiliary function \m{nth}, which is defined by first matching the list argument and then matching the number argument. This is a bit clumsy because even if we reason by cases on the number, the definition of \m{nth} won't reduce unless we also reason by cases on the list.
+The next source of clumsiness is the fact that in the left-hand sides of these equations we used the auxiliary function \m{nth}, which is defined by first matching the list argument and then matching the number argument. This is a bit clumsy because even if we reason by cases on the number, the definition of \m{nth} won't reduce, thus preventing us from using the equations unless we also reason by cases on the list.
 
-All of these sources of clumsiness would add up if we attempted to prove that a list sorting function is correct. If we attempted an induction on the indices, dealing with the proof of \m{i <= j} would be a bit annoying. If we went for a induction on the proof of \m{i <= j}, then we would have to reason by cases on the list just to be able to use the equations. If we went for an induction on the list, we still have a lot of work with the indices.
+All of these sources of clumsiness would add up if we attempted to prove that a list sorting function is correct. If we attempted an induction on the indices, dealing with the proof of \m{i <= j} would be a bit annoying. If we went for an induction on the proof of \m{i <= j}, then we would have to reason by cases on the list just to be able to use the equations. If we went for an induction on the list, we still have a lot of work with the indices.
 
 \section{Improving patchwork definitions} \label{improvingpatchwork}
 
@@ -449,7 +449,7 @@ There are two main reasons for seeking abstraction when solving a problem. The f
 
 Our initial choice has far-reaching implications, because the type of natural numbers is an object very rich in structure. Naturals form a semiring under addition and multiplication and a totally ordered set under the standard ordering, they support proof by induction, are countably infinite, embed in the reals, etc. On the other hand, a general type \m{A} doesn't have any of this structure -- we know almost nothing about it.
 
-At first glance this may look like a disadvantage: not having addition or countability seems to constrain us, because we can't do as much with \m{A} as with the naturals. At second glance, however, we may notice that sometimes being constrained is advantageous, as we have less ways of being wrong. After all, most of the rich structure of natural numbers isn't very relevant to the problem of sorting. At third glance, this should be obvious to every proponent of strong, static typing -- the type system is precisely a mechanism that constrains the programmer by ruling out suspicious (i.e. not well-typed) programs.\footnote{A very good source of examples of Inventor's paradox are proofs by induction. Sometimes proving a theorem with a stronger conclusion can be easier than proving a theorem with a weaker conclusion, because a strong induction hypothesis is much more valuable than a weak induction hypothesis.}
+At first glance this may look like a disadvantage: not having addition or countability seems to constrain us, because we can't do as much with \m{A} as with the naturals. At second glance, however, we may notice that sometimes being constrained is advantageous, as we have fewer ways of being wrong. After all, most of the rich structure of natural numbers isn't very relevant to the problem of sorting. At third glance, this should be obvious to every proponent of strong, static typing -- the type system is precisely a mechanism that constrains the programmer by ruling out suspicious (i.e. not well-typed) programs.\footnote{A very good source of examples of Inventor's paradox are proofs by induction. Sometimes proving a theorem with a stronger conclusion can be easier than proving a theorem with a weaker conclusion, because a strong induction hypothesis is much more valuable than a weak induction hypothesis.}
 
 How do we put this into practice? It's quite simple: in our definition, we replace \m{nat} with \m{A} and the order \m{<=} with a general relation \m{R}. Both \m{A} and \m{R} become parameters.
 
@@ -536,11 +536,11 @@ To sum up our struggles: in this chapter we learned a useful criterion for telli
 
 Now that we have found a good specification of the problem, the next step in the process is to come up with its solution, but we will not concern ourselves with that because the concepts and techniques that aid in inventing algorithms (like divide and conquer, dynamic programming or backtracking) are well-known and covered in all standard textbooks.
 
-Rather than invent algorithms from scratch, in the chapters to come we will show how to formalize and prove them correct. Our running example will be quicksort, one of the fastest and most elegant solutions of the problem of sorting. Quicksort is probably also the most researched algorithm in the whole imperative paradigm, which makes it a perfect candidate to showcase our core concepts and techniques
+Rather than invent algorithms from scratch, in the chapters to come we will show how to formalize and prove them correct. Our running example will be quicksort, one of the fastest and most elegant solutions of the problem of sorting. Quicksort is probably also the most researched algorithm in the whole imperative paradigm, which makes it a perfect candidate to showcase our core concepts and techniques.
 
 \section{Top-down is better than bottom-up} \label{topdown}
 
-The biggest temptation faced by an algorithmist when implementing an algorithm is to get drown in unnecessary details too quickly -- to mistake the trees for the forest, that is. The best way of combating this temptation is to constantly keep in mind a high-level idea that underlies the algorithm. For quicksort (agnostic as to whether the thing being sorted is a list or an array), it usually goes like this:
+The biggest temptation faced by an algorithmist when implementing an algorithm is to get drowned in unnecessary details too quickly -- to mistake the trees for the forest, that is. The best way of combating this temptation is to constantly keep in mind a high-level idea that underlies the algorithm. For quicksort (agnostic as to whether the thing being sorted is a list or an array), it usually goes like this:
 
 \begin{itemize}
     \item If the list/array is empty, we're done.
@@ -594,7 +594,7 @@ The main difference between these two implementations is a discrepancy in their 
 
 We have to admit that the presentation is a bit biased in favor of Haskell, because the definition of \m{filter} is omitted. However, \m{filter} is another two-liner, so even if it was included, the Haskell way of partitioning is still much more abstract than the C way. This is also mitigated by the fact that the second part of the last bullet point, ``putting the recursively sorted parts together'' is biased in favor of C, because it's already included in the partitioning, whereas in Haskell, if we wanted to be fully explicit, we would have to inline the definition of \m{++}, another two-liner.
 
-The above details aren't that important, however. What matters is the conclusion we wanted to illustrate: the Haskell version looks much simpler (and it's way easier to judge its correctness) because it's much more abstract, in some sense. The C version, being much more concrete, isn't as friendly-looking.\footnote{I don't mean to imply that all imperative implementations of quicksort must be somehow inferior to all functional implementations. I think that given language features such as higher-order functions and interfaces, which are missing from C, the imperative implementation could match the functional one in simplicity and elegance.}
+The above details aren't that important, however. What matters is the conclusion we wanted to illustrate: the Haskell version looks much simpler (and it's way easier to judge its correctness) because it's much more abstract and modular, in some sense. The C version, being much more concrete, isn't as friendly-looking.\footnote{I don't mean to imply that all imperative implementations of quicksort must be somehow inferior to all functional implementations. I think that given language features such as higher-order functions and interfaces, which are missing from C, the imperative implementation could match the functional one in simplicity and elegance.}
 
 Our formally correct implementation in Coq will necessarily look much scarier and be several times longer than the typical imperative implementation (because of all the correctness proofs being much longer than the algorithm itself), but will in the end be just as simple and beautiful as the Haskell implementation. The key to achieving this is a technique derived from the above observations on abstractness and concreteness.
 
@@ -602,7 +602,7 @@ Our formally correct implementation in Coq will necessarily look much scarier an
 
 In our case, the ``idea of the algorithm'' corresponds to the four-point description of quicksort given at the beginning of the current section, but we will modify it a bit. We change the first bullet point to ``if the input list is short, sort it using some ad hoc method'' (to allow various kinds of optimizations, like switching to insertion sort for short lists) and in the third bullet point, we will partition the list into three sublists whose elements are less than, equal and greater than the pivot (so that the user can choose whether he wants 2-way or 3-way quicksort).
 
-In the two-line Haskell implementation of quicksort, the head of the list is chosen as pivot and partitioning is done using \m{filter}. In our case, we will implement an ``abstract template'' in which pivot choice, partitioning and the ad hoc sorting of short lists, are all input arguments of the algorithm. In this way, the user can craft a version of quicksort tailed precisely to his needs.
+In the two-line Haskell implementation of quicksort, the head of the list is chosen as pivot and partitioning is done using \m{filter}. In our case, we will implement an ``abstract template'' in which pivot choice, partitioning and the ad hoc sorting of short lists, are all input arguments of the algorithm. In this way, the user can craft a version of quicksort tailored precisely to his needs.
 
 The second part of the concept/technique tells us that we can ``ignore the matter of termination at first''. At first glance this looks rather unrelated to the part about ``abstract template'', but after closer inspection it's an important special case.
 
